      outside the box (since occlusion for the box and axes is computed
      assuming the box is a bounding box). (\PR{202}.)
      
      \item \code{RShowDoc()} can now display the licences shipped with
      \R, e.g. \code{RShowDoc("GPL-3")}.

      \item New wrapper function \code{showNonASCIIfile()} in package
      \pkg{tools}.
    }
  }

  \subsection{INSTALLATION}{
    \itemize{
      \item Building the vignettes is now part of running \command{make}
      from an SVN checkout: a separate \command{make vignettes} is no
      longer required.

      These vignette PDFs are now made with \code{keep.source = TRUE} and
      hence will be laid out differently.
    }
  }

  \subsection{LICENCE}{
    \itemize{
      \item No parts of \R are now licensed solely under GPL-2.  The
      licences for packages \pkg{rpart} and \pkg{survival} have been
      changed, which means that the licence terms for \R as distributed
      are GPL-2 | GPL-3.
    }
  }
  
  \subsection{DEPRECATED AND DEFUNCT}{
   \itemize{
      \item The internal functions \code{.readRDS()} and
      \code{.saveRDS()} are now deprecated in favour of the public
      functions \code{readRDS()} and \code{saveRDS()} introduced in \R
      2.13.0.
    }
  }

  \subsection{BUG FIXES}{
    \itemize{
      \item \code{plot.lm(which = 5)} was intended to order factor
      levels in increasing order of mean standardized residual.   It
      ordered the factor labels correctly, but could plot the wrong
      group of residuals against the label.  (\PR{14545})

      \item \code{mosaicplot()} could clip the factor labels, and could
      overlap them with the cells if a non-default value of
      \code{cex.axis} was used.  (Related to \PR{14550}.)

      \item \code{dataframe[[row,col]]} now dispatches on \code{[[}
      methods for the selected column (spotted by Bill Dunlap).
      
      \item \code{sort.int()} would strip the class of an object, but