@@ -17,4 +17,3 @@
 ## created for use in other packages, e.g. flexmix
 setGeneric("AIC")
 setGeneric("BIC")
-setGeneric("nobs")
