@@ -1,5 +1,5 @@
 
-R version 2.13.0 Under development (unstable) (2011-02-26 r54595)
+R version 2.13.0 Patched (2011-04-18 r55489)
 Copyright (C) 2011 The R Foundation for Statistical Computing
 ISBN 3-900051-07-0
 Platform: x86_64-unknown-linux-gnu (64-bit)
@@ -3066,6 +3066,9 @@ Function: confint (package stats)
 object="mle"
 
 Function: logLik (package stats)
+object="mle"
+
+Function: nobs (package stats)
 object="mle"
 
 Function: profile (package stats)
